JDK16 upgrade fix.